--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "draftjs-to-html": "^0.8.4",
     "echarts": "^4.1.0",
     "echarts-for-react": "^2.0.15-beta.0",
     "eslint": "5.6.0",
@@ -51,9 +52,11 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.6.0",
+    "react-draft-wysiwyg": "^1.13.2",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
+    "supports-color": "^6.1.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
