--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
     "echarts": "^4.1.0",
     "echarts-for-react": "^2.0.15-beta.0",
